PID tuning working

--- a/cfg/tuning.cfg
+++ b/cfg/tuning.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "cmt_pid"
+PACKAGE = "cmt"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -14,5 +14,5 @@ gen.add("y_kd", double_t, 0, "Kd for y axis", 0.0, -40, 15)
 gen.add("z_kp", double_t, 0, "Kp for z axis", 0.0, -15, 30)
 gen.add("z_kd", double_t, 0, "Kd for z axis", 0.0, -30, 30)
 
-exit(gen.generate(PACKAGE, "cmt_pid", "tuning"))
+exit(gen.generate(PACKAGE, "cmt", "tuning"))
 
